Use immutable collections from Java 9+